FIX - Added supports for hover effects to prevent effect on mobile devices

--- a/src/components/Burger/styles.css
+++ b/src/components/Burger/styles.css
@@ -6,12 +6,15 @@
   font-size: 14px;
   cursor: pointer;
 
-  &:hover {
-    path:nth-child(1) {
-      transform: rotate(-15deg) translate3d(2px, -1px, 0)
-    }
-    path:nth-child(3) {
-      transform: rotate(15deg) translate3d(2px, 1px, 0)
+  /* Enable hover effect only for supported devices */
+  @media (hover: hover) {
+    &:hover {
+      path:nth-child(1) {
+        transform: rotate(-15deg) translate3d(2px, -1px, 0);
+      }
+      path:nth-child(3) {
+        transform: rotate(15deg) translate3d(2px, 1px, 0);
+      }
     }
   }
 
@@ -32,7 +35,7 @@
     height: 45px;
     border-radius: 50%;
     background: var(--col-white);
-    box-shadow: 0 2px 10px 1px rgba(0,0,0,.08);
+    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.08);
     transition: transform var(--transition-smooth);
 
     svg {
